@@ -1,6 +1,9 @@
 #ifndef DEVICE_H
 #define DEVICE_H
 #include <iostream>
+
+class Sensor;
+
 using namespace std;
 class Device {
 public:
@@ -8,5 +11,6 @@ public:
     virtual std::string getStatus() const = 0;
     virtual void performAction(const std::string &action) = 0;
     virtual std::string getDeviceType() const = 0;
+    //virtual void update(Sensor* sensor) = 0;
 };
 #endif /*DEVICE_H*/
