@@ -1,6 +1,6 @@
 #include "Thermostat.h"
 
-Thermostat::Thermostat() : currentTemperature(20.0) {}
+Thermostat::Thermostat(double temperature) : currentTemperature(temperature) {}
 
 std::string Thermostat::getStatus() const {
     return "Temperature: " + std::to_string(currentTemperature);
@@ -10,6 +10,10 @@ void Thermostat::performAction(const std::string &action) {
     if (action == "SetTemperature") {
         currentTemperature++;  // Example temperature adjustment
     }
+}
+
+double Thermostat::getTemperature() const {
+    return currentTemperature;
 }
 
 std::string Thermostat::getDeviceType() const {
